Last changes done in the notebook

--- a/COVID vaccination-vs-mortality.ipynb
+++ b/COVID vaccination-vs-mortality.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "id": "b55c799e-ebb3-4396-bbed-383493e579e0",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
        "[32911 rows x 9 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "id": "dc714701-6cb3-41ef-b984-b940efa89404",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "id": "4df5858a-29c7-48b2-a15a-c2860ee68cb2",
    "metadata": {},
    "outputs": [
@@ -287,8 +287,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "id": "697fc283-c6bf-4f78-a945-c9fe2a43f991",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>iso_code</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>32911</td>\n",
+       "      <td>32911</td>\n",
+       "      <td>32911</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>197</td>\n",
+       "      <td>197</td>\n",
+       "      <td>472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2021-08-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>471</td>\n",
+       "      <td>471</td>\n",
+       "      <td>110</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         country iso_code        date\n",
+       "count                      32911    32911       32911\n",
+       "unique                       197      197         472\n",
+       "top     United States of America      USA  2021-08-09\n",
+       "freq                         471      471         110"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe(include = 'object')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "b424047b-26fa-4ab8-a400-9ec91246ffa9",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +497,7 @@
        "max    11447.000000  1.447065e+09    124.737373  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,13 +508,307 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b424047b-26fa-4ab8-a400-9ec91246ffa9",
+   "execution_count": 53,
+   "id": "809e5836-e0d8-41b0-9386-8ff925846ee4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df."
+    "from datetime import datetime\n",
+    "\n",
+    "df['date'] = pd.to_datetime(df.date,format = '%Y-%m-%d')\n",
+    "df['date'] = [date.strftime('%YW%W') for date in df.date]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "116e7ef4-fa2d-4a20-a7bc-c40636eac7f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>iso_code</th>\n",
+       "      <th>date</th>\n",
+       "      <th>total_vaccinations</th>\n",
+       "      <th>people_vaccinated</th>\n",
+       "      <th>people_fully_vaccinated</th>\n",
+       "      <th>New_deaths</th>\n",
+       "      <th>population</th>\n",
+       "      <th>ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021W19</td>\n",
+       "      <td>504502.0</td>\n",
+       "      <td>448878.0</td>\n",
+       "      <td>55624.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>40374668.0</td>\n",
+       "      <td>1.111781</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021W20</td>\n",
+       "      <td>547901.0</td>\n",
+       "      <td>470341.0</td>\n",
+       "      <td>77560.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>40374668.0</td>\n",
+       "      <td>1.164941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021W21</td>\n",
+       "      <td>573277.0</td>\n",
+       "      <td>476367.0</td>\n",
+       "      <td>96910.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>40374668.0</td>\n",
+       "      <td>1.179866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021W21</td>\n",
+       "      <td>590454.0</td>\n",
+       "      <td>479372.0</td>\n",
+       "      <td>111082.0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>40374668.0</td>\n",
+       "      <td>1.187309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021W21</td>\n",
+       "      <td>593313.0</td>\n",
+       "      <td>479574.0</td>\n",
+       "      <td>113739.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>40374668.0</td>\n",
+       "      <td>1.187809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32906</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2022W12</td>\n",
+       "      <td>8691642.0</td>\n",
+       "      <td>4814582.0</td>\n",
+       "      <td>3473523.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15229891.0</td>\n",
+       "      <td>31.612715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32907</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2022W12</td>\n",
+       "      <td>8791728.0</td>\n",
+       "      <td>4886242.0</td>\n",
+       "      <td>3487962.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15229891.0</td>\n",
+       "      <td>32.083237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32908</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2022W12</td>\n",
+       "      <td>8845039.0</td>\n",
+       "      <td>4918147.0</td>\n",
+       "      <td>3493763.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15229891.0</td>\n",
+       "      <td>32.292726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32909</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2022W13</td>\n",
+       "      <td>8934360.0</td>\n",
+       "      <td>4975433.0</td>\n",
+       "      <td>3501493.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15229891.0</td>\n",
+       "      <td>32.668868</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32910</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2022W13</td>\n",
+       "      <td>9039729.0</td>\n",
+       "      <td>5053114.0</td>\n",
+       "      <td>3510256.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15229891.0</td>\n",
+       "      <td>33.178924</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>32911 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           country iso_code     date  total_vaccinations  people_vaccinated  \\\n",
+       "0      Afghanistan      AFG  2021W19            504502.0           448878.0   \n",
+       "1      Afghanistan      AFG  2021W20            547901.0           470341.0   \n",
+       "2      Afghanistan      AFG  2021W21            573277.0           476367.0   \n",
+       "3      Afghanistan      AFG  2021W21            590454.0           479372.0   \n",
+       "4      Afghanistan      AFG  2021W21            593313.0           479574.0   \n",
+       "...            ...      ...      ...                 ...                ...   \n",
+       "32906     Zimbabwe      ZWE  2022W12           8691642.0          4814582.0   \n",
+       "32907     Zimbabwe      ZWE  2022W12           8791728.0          4886242.0   \n",
+       "32908     Zimbabwe      ZWE  2022W12           8845039.0          4918147.0   \n",
+       "32909     Zimbabwe      ZWE  2022W13           8934360.0          4975433.0   \n",
+       "32910     Zimbabwe      ZWE  2022W13           9039729.0          5053114.0   \n",
+       "\n",
+       "       people_fully_vaccinated  New_deaths  population      ratio  \n",
+       "0                      55624.0          12  40374668.0   1.111781  \n",
+       "1                      77560.0          10  40374668.0   1.164941  \n",
+       "2                      96910.0          10  40374668.0   1.179866  \n",
+       "3                     111082.0          19  40374668.0   1.187309  \n",
+       "4                     113739.0          14  40374668.0   1.187809  \n",
+       "...                        ...         ...         ...        ...  \n",
+       "32906                3473523.0           2  15229891.0  31.612715  \n",
+       "32907                3487962.0           2  15229891.0  32.083237  \n",
+       "32908                3493763.0           1  15229891.0  32.292726  \n",
+       "32909                3501493.0           1  15229891.0  32.668868  \n",
+       "32910                3510256.0           0  15229891.0  33.178924  \n",
+       "\n",
+       "[32911 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "a5fd44e1-ed24-41ce-8fe9-a210bc0bb494",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "197"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df.country.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "d41c40b8-7f39-4837-a812-fbbaf7b2f860",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.groupby(by = ['country', 'iso_code', 'date']).max().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "b0e37506-4ad5-448c-ac69-4e596b2da7f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "197"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df.country.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be6fd7e0-beec-4487-b020-8b81a923fc55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "658caf59-d2fc-41a3-94ea-52f04f5be5d2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13b120a6-d22a-483e-9214-f1808fedafd9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
