Last changes done

--- a/COVID vaccination-vs-mortality.ipynb
+++ b/COVID vaccination-vs-mortality.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "b55c799e-ebb3-4396-bbed-383493e579e0",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
        "[32911 rows x 9 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "dc714701-6cb3-41ef-b984-b940efa89404",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "4df5858a-29c7-48b2-a15a-c2860ee68cb2",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "697fc283-c6bf-4f78-a945-c9fe2a43f991",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
        "freq                         471      471         110"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "b424047b-26fa-4ab8-a400-9ec91246ffa9",
    "metadata": {},
    "outputs": [
@@ -497,7 +497,7 @@
        "max    11447.000000  1.447065e+09    124.737373  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "809e5836-e0d8-41b0-9386-8ff925846ee4",
    "metadata": {},
    "outputs": [],
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "116e7ef4-fa2d-4a20-a7bc-c40636eac7f7",
    "metadata": {},
    "outputs": [
@@ -725,7 +725,7 @@
        "[32911 rows x 9 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "a5fd44e1-ed24-41ce-8fe9-a210bc0bb494",
    "metadata": {},
    "outputs": [
@@ -746,7 +746,7 @@
        "197"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "d41c40b8-7f39-4837-a812-fbbaf7b2f860",
    "metadata": {},
    "outputs": [],
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "id": "b0e37506-4ad5-448c-ac69-4e596b2da7f9",
    "metadata": {},
    "outputs": [
@@ -777,7 +777,7 @@
        "197"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,24 +788,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "be6fd7e0-beec-4487-b020-8b81a923fc55",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Al haber agrupado cogiendo el máximo valor, el número de nuevas muertes no era el correcto.\n",
+    "# Por lo tanto, creo una lista para sustituir ese valor, por el correcto.\n",
+    "\n",
+    "# Copio el dataset original, y agrupo el dataset sumando la columna de nuevas muertes.\n",
+    "\n",
+    "deaths_df = O_df.copy()\n",
+    "deaths_df['date'] = pd.to_datetime(deaths_df.date,format = '%Y-%m-%d')\n",
+    "deaths_df['date'] = [date.strftime('%YW%W') for date in deaths_df.date]\n",
+    "deaths_df = deaths_df.groupby(by = ['country', 'iso_code', 'date'])['New_deaths'].sum().reset_index()\n",
+    "deaths_list = deaths_df['New_deaths']\n",
+    "df['New_deaths'] = deaths_list"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "658caf59-d2fc-41a3-94ea-52f04f5be5d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>iso_code</th>\n",
+       "      <th>date</th>\n",
+       "      <th>total_vaccinations</th>\n",
+       "      <th>people_vaccinated</th>\n",
+       "      <th>people_fully_vaccinated</th>\n",
+       "      <th>New_deaths</th>\n",
+       "      <th>population</th>\n",
+       "      <th>ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021W19</td>\n",
+       "      <td>504502.0</td>\n",
+       "      <td>448878.0</td>\n",
+       "      <td>55624.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>40374668.0</td>\n",
+       "      <td>1.111781</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021W20</td>\n",
+       "      <td>547901.0</td>\n",
+       "      <td>470341.0</td>\n",
+       "      <td>77560.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>40374668.0</td>\n",
+       "      <td>1.164941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021W21</td>\n",
+       "      <td>600152.0</td>\n",
+       "      <td>480226.0</td>\n",
+       "      <td>119926.0</td>\n",
+       "      <td>63</td>\n",
+       "      <td>40374668.0</td>\n",
+       "      <td>1.189424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021W22</td>\n",
+       "      <td>630305.0</td>\n",
+       "      <td>481800.0</td>\n",
+       "      <td>148505.0</td>\n",
+       "      <td>61</td>\n",
+       "      <td>40374668.0</td>\n",
+       "      <td>1.193323</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021W23</td>\n",
+       "      <td>641295.0</td>\n",
+       "      <td>482952.0</td>\n",
+       "      <td>158343.0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>40374668.0</td>\n",
+       "      <td>1.196176</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       country iso_code     date  total_vaccinations  people_vaccinated  \\\n",
+       "0  Afghanistan      AFG  2021W19            504502.0           448878.0   \n",
+       "1  Afghanistan      AFG  2021W20            547901.0           470341.0   \n",
+       "2  Afghanistan      AFG  2021W21            600152.0           480226.0   \n",
+       "3  Afghanistan      AFG  2021W22            630305.0           481800.0   \n",
+       "4  Afghanistan      AFG  2021W23            641295.0           482952.0   \n",
+       "\n",
+       "   people_fully_vaccinated  New_deaths  population     ratio  \n",
+       "0                  55624.0          12  40374668.0  1.111781  \n",
+       "1                  77560.0          10  40374668.0  1.164941  \n",
+       "2                 119926.0          63  40374668.0  1.189424  \n",
+       "3                 148505.0          61  40374668.0  1.193323  \n",
+       "4                 158343.0          64  40374668.0  1.196176  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "13b120a6-d22a-483e-9214-f1808fedafd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "197"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13b120a6-d22a-483e-9214-f1808fedafd9",
+   "id": "20ec9352-7284-4cd5-a1ae-55abbc5f27f1",
    "metadata": {},
    "outputs": [],
    "source": []
